[project]
name = "sharespences"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    {name = "sqkrv", email = "kochkarev02@gmail.com"},
]
requires-python = "<4.0,>=3.13"
dependencies = [
    "fastapi[all]<1.0.0,>=0.109.0",
    "sqlmodel>=0.0.22",
    "webauthn<3.0.0,>=2.0.0",
    "pyjwt<3.0.0,>=2.8.0",
    "geoalchemy2<1.0.0,>=0.14.3",
    "asyncpg<1.0.0,>=0.29.0",
    "psycopg2<3.0.0,>=2.9.9",
    "greenlet<4.0.0,>=3.0.3",
    "httpx<1.0.0,>=0.26.0",
    "pydantic-settings<3.0.0,>=2.1.0",
    "openpyxl<4.0.0,>=3.1.2",
    "email-validator>=2.2.0",
]
